--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 botcity-framework-web>=0.9.0,<1.0
 botcity-maestro-sdk>=0.3.3,<1.0
+pandas
 # Uncomment to use botcity-utils
 # botcity-utils>=0.1.2
 
